# amiditools

./: Makefile  README.md
amiga/: Makefile  midi-echo  midi-echo.c  midi-eth  midi-expunge  midi-expunge.c  midi-info  midi-recv  midi-send  midi-setup.c  midi-test  midi-udp  midi-udpdrv.c  parser.h  udp.c  udp.h
amiga/contrib/barsnpipes/: .gitignore  Makefile  README.md  camdin.c  camdout.c  link.with  makefile  midiinw.c  scoptions  smakefile  toolstart.c
amiga/contrib/barsnpipes/include/: compilerspecific.h  tools.h  v.h
amiga/contrib/barsnpipes/include/clib/: camd_protos.h
amiga/contrib/barsnpipes/include/pragmas/: camd_pragmas.h
amiga/include/inline/: camd_protos.h
amiga/src/: cmd.c  cmd.h  midi-echo.c  midi-info.c  midi-perf.c  midi-recv.c  midi-send.c  midi-setup.c  midi-setup.h  midi-tools.c  midi-tools.h  parser.c
amiga/src/drv/: midi-drv-echo.c  midi-drv-udp.c  midi-drv.c  midi-drv.h  midi-msg.h  midi-parser.c  midi-parser.h  midi-udpdrv.c  parser.c  parser.h  proto.c  proto.h  udp.c
host/: Makefile  midi-perf  midi-udp-bridge  midi-udp-echo  setup.cfg
host/amiditools/: __init__.py  udpmidi.py
host/miditools/: __init__.py  perf.py  portconf.py  proto.py  udpmidi.py
