[metadata]
name = amiditools
version = attr: amiditools.__version__
author = Christian Vogelgsang
author_email = chris@vogelgsang.org
description = Host part of Amiga MIDI tools 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cnvogelg/amiditools
project_urls =
    Bug Tracker = https://github.com/cnvogelg/amiditools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    rtmidi
scripts = 
    midi-udp-bridge
    midi-udp-echo
    midi-perf
